<resources>
    <string name="app_name">H3 Project</string>
    <!-- Create Post Fragment -->
    <string name="create_new_post">Create New Post</string>
    <string name="whats_on_your_mind">What\'s on your mind?</string>
    <string name="post_image_preview">Post image preview</string>
    <string name="add_image">Add Image</string>
    <string name="post">Post</string>
    <string name="please_write_something">Please write something to post</string>
    <string name="must_be_logged_in">You must be logged in to post</string>
    <string name="post_created_successfully">Post created successfully</string>
    <string name="failed_to_create_post">Failed to create post: %1$s</string>
    <string name="failed_to_upload_image">Failed to upload image: %1$s</string>
    
    <!-- Reply and Retweet -->
    <string name="reply_to_post">Reply to Post</string>
    <string name="replying_to">Replying to @%1$s</string>
    <string name="write_your_reply">Write your reply…</string>
    <string name="reply">Reply</string>
    <string name="reply_created_successfully">Reply sent successfully</string>
    <string name="failed_to_create_reply">Failed to send reply: %1$s</string>
    <string name="retweet">Retweet</string>
    <string name="retweeted">Retweeted</string>
    <string name="retweeted_by">%1$s retweeted</string>
    <string name="undo_retweet">Undo Retweet</string>
    
    <!-- Home Fragment -->
    <string name="home_feed">Home Feed</string>
    <string name="no_posts_available">Soyez le premier à poster !</string>
    <string name="error_loading_posts">Error loading posts</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="create_post">Create Post</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    
    <!-- Post Detail Fragment -->
    <string name="post_detail">Post</string>
    <string name="no_replies">Aucune réponse pour le moment</string>
    <string name="replies">Réponses</string>
    <string name="share">Partager</string>
    <string name="likes_count">%1$d J\'aime</string>
    <string name="retweets_count">%1$d Retweets</string>
    <string name="replies_count">%1$d Réponses</string>
    
    <!-- Profile Fragment -->
    <string name="follow">Suivre</string>
    <string name="unfollow">Ne plus suivre</string>
    <string name="followers">Abonnés</string>
    <string name="following">Abonnements</string>
    <string name="posts">Posts</string>
    <string name="edit_profile">Modifier le profil</string>
    <string name="follow_success">Vous suivez maintenant cet utilisateur</string>
    <string name="unfollow_success">Vous ne suivez plus cet utilisateur</string>
    <string name="follow_error">Erreur lors de l\'abonnement</string>
    <string name="unfollow_error">Erreur lors du désabonnement</string>
    
    <!-- Nouvelles chaînes pour les listes d'abonnés et d'abonnements -->
    <string name="followers_list">Abonnés de %s</string>
    <string name="following_list">Abonnements de %s</string>
    <string name="no_followers">Aucun abonné</string>
    <string name="no_following">Aucun abonnement</string>
    <string name="loading_users">Chargement des utilisateurs...</string>
    <string name="error_loading_users">Erreur lors du chargement des utilisateurs</string>
</resources>